@@ -43,6 +43,12 @@ static flext::ThrCond *thrhelpcond = NULL;
 bool flext::StartHelper()
 {
 	if(thrhelpid) return true;
+	
+	if(!thrid) {
+		// system thread has not been set
+		ERRINTERNAL();
+		return false;
+	}
 
 	bool ok = false;
 #if FLEXT_THREADS == FLEXT_THR_POSIX
@@ -96,7 +102,7 @@ void flext::ThrHelper(void *)
 	pthread_attr_setdetachstate(&attr,PTHREAD_CREATE_DETACHED);
 #endif
 
-//	post("Helper");
+//	post("Helper thread started");
 
 	// set thread priority one point below normal
 	// so thread construction won't disturb real-time audio
