@@ -83,9 +83,9 @@ public:
 		Arg &SetV(S *r,I rs,S *i = NULL,I is = 0);
 		Arg &SetE(const Env *bp);
 
-		typedef struct env_t { const Env *env; };
-		typedef	struct v_t { S *rdt,*idt; I rs,is; };
-		typedef struct x_t { R r,i; };
+		struct env_t { const Env *env; };
+		struct v_t { S *rdt,*idt; I rs,is; };
+		struct x_t { R r,i; };
 
 		enum { arg_ = 0,arg_x,arg_v,arg_env } argtp;
 		union {
